--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="container">
         <p>I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
     </div>
-
+    <div class="container">
+        <button class="button">Click to know more!</button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
