--- a/index.html
+++ b/index.html
@@ -72,31 +72,26 @@
       </div>
       <div data-section="who-am-i" data-value="next-content">
         <p>
-          Hi, I'm Eric Barrero Giménez and I'm an Android Developer. I've
-          been studying Software Developement for 2 years at
-          <i>Centre d'Estudis Monlau</i>, and now I'm stdying Kotlin at my
-          own, as due to COVID we could't be able to sudy it on
-          <i>DAM</i>.<br /><br />
+          Hi, I'm Eric Barrero Giménez and I'm an Android Developer. I've been studying Software Developement for 2
+          years at <i>Centre d'Estudis Monlau</i>, and now I'm stdying Kotlin at my own, as due to COVID we could't be
+          able to sudy it on <i>DAM</i>.<br /><br />
           On the first two years I've studied DAM (Cross-platform Application Development):
         </p>
         <ul>
           <li>
-            On the first year I have learnt pure Java including basic things
-            like variable types, loops, Data-Structures, Graphics Windows
-            (Swing), etc.<br />
+            On the first year I have learnt pure Java including basic things like variable types, loops,
+            Data-Structures, Graphics Windows (Swing), etc.<br />
             More at <a href="#1DAM"><b><i>1 DAM</i></b></a>.
           </li>
           <br />
           <li>
-            On the second year, talking about Java, I have learnt more Graphics 
-            Windows (Swing), Sockets, Reverse Engineering, DAOs.<br />
-            If we talk about Android, this was my first year. I've started learning 
-            the basics as Creating activities, knowing the basic views and implementing 
-            all the Java things I have learnt the previous year, and later on, I also 
-            learnt the Activity and Fragment lifecycle, Threads, SQLite, etc. Then I 
-            started making little apps "playing" with the sensors (proximity, geolocation, 
-            compass, etc.); a music, photo and video player; or an app with management and 
-            manipulation of an internal local database.<br />
+            On the second year, talking about Java, I have learnt more Graphics Windows (Swing), Sockets, Reverse
+            Engineering, DAOs.<br />
+            If we talk about Android, this was my first year. I've started learning the basics as Creating activities,
+            knowing the basic views and implementing all the Java things I have learnt the previous year, and later on,
+            I also learnt the Activity and Fragment lifecycle, Threads, SQLite, etc. Then I started making little apps
+            "playing" with the sensors (proximity, geolocation, compass, etc.); a music, photo and video player; or an
+            app with management and manipulation of an internal local database.<br />
             More at <a href="#2DAM"><b><i>2 DAM</i></b></a>.
           </li>
         </ul>
@@ -105,9 +100,8 @@
         </p>
         <ul>
           <li>
-            This year I have learnt in great measure Database, Network and Operating
-            System management. Also the most used software and utilities to configure
-            the newtork or troubleshoot the systems.<br />
+            This year I have learnt in great measure Database, Network and Operating System management. Also the most
+            used software and utilities to configure the newtork or troubleshoot the systems.<br />
             More at <a href="#2ASIX"><b><i>2 ASIX</i></b></a>.
           </li>
         </ul>
@@ -130,15 +124,12 @@
         </h3>
         <div data-section="academic-timeline" data-value="first-content">
           <p>
-            After four good years at ESO with an average grade of 7 / 8, my
-            teachears encouraged me to go to <i>Bachillerato</i> (Secondary
-            School Certificate) instead of doing
-            <i>CFGM (Ciclo Formativo de Grado Medio)</i> (Vocational
-            Training).<br /><br />
-            During these two years I studied the Technological branch, and 
-            my optional subjects were Technology, Physics and Chemistry.<br /><br />
-            My final grade was ~6.5, but I was convinced that my strong was practical 
-            and not theoretical.
+            After four good years at ESO with an average grade of 7 / 8, my teachears encouraged me to go to
+            <i>Bachillerato</i> (Secondary School Certificate) instead of doing <i>CFGM (Ciclo Formativo de Grado
+              Medio)</i> (Vocational Training).<br /><br />
+            During these two years I studied the Technological branch, and my optional subjects were Technology, Physics
+            and Chemistry.<br /><br />
+            My final grade was ~6.5, but I was convinced that my strong was practical and not theoretical.
           </p>
         </div>
       </div>
@@ -146,25 +137,21 @@
     <div class="container right" id="1DAM">
       <div class="content">
         <h2 data-section="academic-timeline" data-value="second-title">
-          1<sup>st</sup> Cross-platform Application Development -
-          <i>(1º DAM)</i>
+          1<sup>st</sup> Cross-platform Application Development - <i>(1º DAM)</i>
         </h2>
         <h3 data-section="academic-timeline" data-value="second-dates">
           September 2018 - June 2019
         </h3>
         <div data-section="academic-timeline" data-value="second-content">
           <p>
-            After <i>Bachillerato</i> I started <i>1º DAM</i>, as coding is
-            something that has always intrigued me. It was 2 years long and
-            the 1<sup>st</sup> year was a mix between software development
-            <i>(DAM)</i> and system and network administration
-            <i>(ASIX)</i>.<br /><br />
+            After <i>Bachillerato</i> I started <i>1º DAM</i>, as coding is something that has always intrigued me. It
+            was 2 years long and the 1<sup>st</sup> year was a mix between software development <i>(DAM)</i> and system
+            and network administration <i>(ASIX)</i>.<br /><br />
             During this year I studied:
           </p>
           <ul>
             <li>
-              Windows Desktop, Windows Server, Linux Desktop and Linux Server
-              Management.
+              Windows Desktop, Windows Server, Linux Desktop and Linux Server Management.
             </li>
             <li>Java.</li>
             <li>C++.</li>
@@ -190,47 +177,58 @@
         </h3>
         <div data-section="academic-timeline" data-value="third-content">
           <p>
-            This 2<sup>nd</sup> and last year of <i>DAM</i> was 100% software
-            development. During this year I studied:
+            This 2<sup>nd</sup> and last year of <i>DAM</i> was 100% software development. During this year I studied:
           </p>
           <ul>
-            <li>Android (Java).</li>
+            <li>Android
+              <ul>
+                <li>Language: Java</li>
+                <li>Implment of views</li>
+                <li>Activities</li>
+                <li>Fragments</li>
+                <li>Intents (to other activities and other apps)</li>
+                <li>Threads</li>
+                <li>Internal DB (SQLite)</li>
+                <li>LifeCycle</li>
+                <li>Logcat</li>
+                <li>MediaPlayer</li>
+                <li>GraphicView</li>
+                <li>Sensors (Proximity, GPS, Gyroscope)</li>
+                <li>QR Scan</li>
+                <li>API and Web Service communication (receiving data and sending data)</li>
+              </ul>
+            </li>
             <li>Java (Data-Structures, Sockets, Reverse Engineering).</li>
             <li>C#.</li>
             <li>PHP.</li>
           </ul>
           <p>
-            As this was the last year of <i>DAM</i>, we needed to make a final
-            project. We were ready to work with hospitals and make a project
-            about alzheihmer and/or parkinson, but COVID-19 preventud us that
-            project. So we made a project with the software infrastructure to
-            manage a small/medium restaurant. It contained:
+            As this was the last year of <i>DAM</i>, we needed to make a final project. We were ready to work with
+            hospitals and make a project about alzheihmer and/or parkinson, but COVID-19 preventud us that project. So
+            we made a project with the software infrastructure to manage a small/medium restaurant. It contained:
           </p>
           <ul>
             <li>A database stored at Amazon AWS (Amazon RDS).</li>
             <li>
-              A Web site made with HTML, CSS, JavaScript and PHP to book a
-              table and comunicate the DB and the apps via JSON.
+              A Web site made with HTML, CSS, JavaScript and PHP to book a table and comunicate the DB and the apps via
+              JSON.
             </li>
             <li>
-              A desktop application made with C# to manage the users and
-              admins, the available meals and menus, and a section dedicated
-              to let the chefs know the food needed to cook.
+              A desktop application made with C# to manage the users and admins, the available meals and menus, and a
+              section dedicated to let the chefs know the food needed to cook.
             </li>
             <li>
-              An Android application made with Java used by the
-              waiters to create the orders of the people who eat at the
-              restaurant.
+              An Android application made with Java used by the waiters to create the orders of the people who eat at
+              the restaurant.
             </li>
           </ul>
           <p>
-            The entire Android app was made by me, and you can check the code
-            here:
-            <a href="https://github.com/ericbargim/GestMans" target="_blank"><b>GestMans</b></a>. Our final project
-            score was 10.<br /><br />This was my best
-            year as a student (and probably the one I enjoyed the most) with a
-            final grade of <b>~9.7</b>.<br /><br />My final grade of
-            <i>DAM</i> is <b>9.32</b>.
+            The entire Android app was made by me, and you can check the code here: <a
+              href="https://github.com/ericbargim/GestMans" target="_blank"><b>GestMans</b></a>. Our final project score
+            was 10.<br /><br />
+            This was my best year as a student (and probably the one I enjoyed the most) with a final grade of
+            <b>~9.7</b>.<br /><br />
+            My final grade of <i>DAM</i> is <b>9.32</b>.
           </p>
         </div>
       </div>
@@ -245,10 +243,9 @@
         </h3>
         <div data-section="academic-timeline" data-value="fourth-content">
           <p>
-            As the first year of <i>DAM</i> was mixed with the first year of
-            <i>ASIX</i> (Systems and Network Administration), I already got
-            <i>1<sup>st</sup> ASIX</i> passed, and I could do
-            <i>2ASIX</i> just after <i>2DAM</i>. During this year I studied:
+            As the first year of <i>DAM</i> was mixed with the first year of <i>ASIX</i> (Systems and Network
+            Administration), I already got <i>1<sup>st</sup> ASIX</i> passed, and I could do <i>2ASIX</i> just after
+            <i>2DAM</i>. During this year I studied:
           </p>
           <ul>
             <li>DB Management.</li>
@@ -259,41 +256,81 @@
             <li>Security and High Availability.</li>
           </ul>
           <p>
-            Also this year we had to make a final project, so we decided to
-            extend last year's project creating all the necessary
-            infrastructure to deploy our app at a restaurant. This project
-            had:
+            Also this year we had to make a final project, so we decided to extend last year's project creating all the
+            necessary infrastructure to deploy our app at a restaurant. This project had:
           </p>
           <ul>
             <li>The design of our headquarters and two restaurants.</li>
             <li>A simulated network infrastructure recreating a real one.</li>
             <li>Again, the DB was stored at Amazon AWS (Amazon RDS).</li>
-            <li>
-              A Linux server as the Apache server to store the web site.
-            </li>
+            <li>A Linux server as the Apache server to store the web site.</li>
             <li>A Windows Server as RRAS (Simulating a Router).</li>
-            <li>
-              Other Windows Server managing the Active Directory and DNS.
-            </li>
-            <li>
-              Another Windows Server with Active Directory and DNS to ensure
-              High Availability.
-            </li>
-            <li>
-              A NAS to store the updates of the Android and Desktop apps.
-            </li>
+            <li>Other Windows Server managing the Active Directory and DNS.</li>
+            <li>Another Windows Server with Active Directory and DNS to ensure High Availability.</li>
+            <li>A NAS to store the updates of the Android and Desktop apps.</li>
             <li>A VPN to be able to connect to the NAS.</li>
             <li>A Backup system with the hard drives in RAID.</li>
           </ul>
           <p>
-            Also, all the apps from the previous year were updated to ensure
-            full compatibility. The entire team worked together at every task,
-            so no roles were assigned. Our final project score was also 10.<br /><br />I
-            also enjoyed a lot this year, but not as much as <i>DAM</i>. I
-            missed a lot these coding moments of thinking how to do a task,
-            struggling on how to fix a bug, etc.<br /><br />My final grade of
-            <i>ASIX</i> is <b>9.1</b>.
+            Also, all the apps from the previous year were updated to ensure full compatibility. The entire team worked
+            together at every task, so no roles were assigned. Our final project score was also 10.<br /><br />
+            I also enjoyed a lot this year, but not as much as <i>DAM</i>. I missed a lot these coding moments of
+            thinking how to do a task, struggling on how to fix a bug, etc.<br /><br />
+            My final grade of <i>ASIX</i> is <b>9.1</b>.
           </p>
+        </div>
+      </div>
+    </div>
+    <div class="container left" id="MyOwn">
+      <div class="content">
+        <h2 data-section="academic-timeline" data-value="fifth-title">
+          On my own
+        </h2>
+        <h3 data-section="academic-timeline" data-value="fifth-dates">
+          June 2021 - Now
+        </h3>
+        <div data-section="academic-timeline" data-value="fifth-content">
+          <p>
+            Since I ended <i>2<sup>nd</sup> ASIX</i> I've been studying Android by my own, 100% self-taught, as I knew it was my preferred
+            language / platform since I started practicing it at <i>2<sup>nd</sup> DAM</i>.<br /><br />
+            First I resumed a project I created when I was in <i>2<sup>nd</sup> ASIX</i>, an app called <a
+              href="https://github.com/AdverseGecko3/CryptOficatioN" target="_blank">CryptOficatioN</a>. Initially it
+            was an application displaying the most popular crypto tokens, with a simple RecyclerView and nothing much,
+            but then I started adding things such as:
+          </p>
+          <ul>
+            <li>A filtering system of the data displayed in the RecyclerView.</li>
+            <li>An Splash Screen (The old way, with a separate Activity).</li>
+            <li>SwipeRefreshLayout to refresh data swiping down.</li>
+            <li>Use of Glide / Picasso to load images via url and cache them.</li>
+            <li>Sorting list via different parameters as Market Cap, Name, Symbol or Price.</li>
+            <li>SharedPreferences to save App Settings as Default Sort, Default Currency or Items per page.</li>
+            <li>ItemTouchHelper to swipe an item on the list and do an action.</li>
+            <li>Light / Dark color scheme.</li>
+          </ul>
+          <p>
+            After doing all this, I migrated the app to Kotlin as it was already the language-to-go by Google, and
+            wanted
+            to leave behind Java and start learning Kotlin. I started the <a
+              href="https://github.com/AdverseGecko3/CryptOficatioN_kotlin" target="_blank">CryptOficatioN_kotlin</a>
+            project. In it I modified some features of the "old" project and started adding new things:
+          </p>
+          <ul>
+            <li>Switched from HTTP Request to Retrofit2.</li>
+            <li>Added MVVM architecture and LiveData Subscription.</li>
+            <li>Use ViewBinding to work easiliy with the views.</li>
+            <li>Changed SplashScreen to Layer-List method.</li>
+            <li>Using extensions to not repeat code.</li>
+            <li>Migrated from SQLite to Room.</li>
+            <li>Working with coroutines.</li>
+            <li>Switched to Navigation Controller to navigate between framgents / Dialogs.</li>
+            <li>Use of <a href="https://github.com/PhilJay/MPAndroidChart" target="_blank">MPAndroidChart</a> to display
+              charts.</li>
+            <li>Send notification and be able to send them daily at an specific time.</li>
+            <li>Implementation of Google AdMob.</li>
+            <li>Android Hilt for independencies injection.</li>
+            <li>Implementation of Firebase and Crashlytics.</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -332,12 +369,10 @@
         </h3>
         <div data-section="job-timeline" data-value="first-content">
           <p>
-            This was my internship for <i>2º DAM</i>. I was working with the
-            consulting firm Accenture, specifically for Zurich on aninsurance 
-            app. I was doing UI Testing with Appium,ensuring that the app flow 
-            was working as desired.<br /><br />
-            This internship should have ended at the end of May, but due to
-            COVID-19 it ended sooner than expected.
+            This was my internship for <i>2º DAM</i>. I was working with the consulting firm Accenture, specifically for
+            Zurich on aninsurance app. I was doing UI Testing with Appium,ensuring that the app flow was working as
+            desired.<br /><br />
+            This internship should have ended at the end of May, but due to COVID-19 it ended sooner than expected.
           </p>
         </div>
       </div>
@@ -352,13 +387,11 @@
         </h3>
         <div data-section="job-timeline" data-value="second-content">
           <p>
-            I started doing litle things as installing apps on employees
-            laptops, installing cables, etc. But after a few weeks and seeing
-            I was doing great, the CEO decided to deliver more tasks to me. I
-            started to prepare all the laptops when someone left the company
-            or when someone new entered and later on I took care of all the
-            computer related incidents, any needs of updates and ensuring the
-            proper functioning of all electronical devices.
+            I started doing litle things as installing apps on employees laptops, installing cables, etc. But after a
+            few weeks and seeing I was doing great, the CEO decided to deliver more tasks to me. I started to prepare
+            all the laptops when someone left the company or when someone new entered and later on I took care of all
+            the computer related incidents, any needs of updates and ensuring the proper functioning of all electronical
+            devices.
           </p>
         </div>
       </div>
